recipe list element: fix wrapping behaviour and styling of text elements

--- a/src/app/components/_search-page/recipe-list-element/recipe-list-element.component.less
+++ b/src/app/components/_search-page/recipe-list-element/recipe-list-element.component.less
@@ -18,6 +18,7 @@ list element
   flex-direction: row-reverse;
   padding: 25px 0;
   width: 100%;
+  text-decoration: none;
 }
 
 /*************************************
@@ -63,14 +64,14 @@ list element content
 
 
   &__title {
-    margin: 18px 0 4px 0;
     .mainFontFamily();
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 124%;
+    margin: 18px 0 4px 0;
     color: #000000;
-    border-bottom: 1px solid #000000;;
+    border-bottom: 1px solid #000000;
   }
 
   &__secondLine {
@@ -84,6 +85,8 @@ list element content
       font-weight: 700;
       font-size: 14px;
       line-height: 124%;
+      white-space: nowrap;
+      display: inline-block;
 
       &:not(:last-child) {
         padding-right: 3px;
@@ -101,6 +104,8 @@ list element content
       font-weight: 400;
       font-size: 12px;
       line-height: 124%;
+      white-space: nowrap;
+      display: inline-block;
 
       &:before {
         position: absolute;
