--- a/src/app/components/search-page/search-page.component.less
+++ b/src/app/components/search-page/search-page.component.less
@@ -63,7 +63,7 @@ content area
 
   > app-recipe-list-element {
     @media screen and (max-width: @width_max-xl) and (min-width: @width_min-xl) {
-      width: 30%;
+      width: calc(1/3 * 100%);
       margin: 15px;
     }
     @media screen and (max-width: @width_max-md) and (min-width: @width_min-sm) {
